# Infer

./: .gitignore  CMakeLists.txt
include/: status_code.hpp  tick.hpp
include/data/: load_data.hpp  tensor.hpp
include/layer/abstract/: layer.hpp  layer_factory.hpp  param_layer.hpp
include/parser/: parse_expression.hpp
include/runtime/: ir.h  runtime_attr.hpp  runtime_datatype.hpp  runtime_ir.hpp  runtime_op.hpp  runtime_operand.hpp  runtime_parameter.hpp  store_zip.hpp
source/data/: load_data.cpp  param_layer.cpp  tensor.cpp
source/layer/abstract/: layer.cpp  layer_factory.cpp
source/layer/details/: adaptive_avgpooling.cpp  adaptive_avgpooling.hpp  convolution.cpp  expression.cpp  expression.hpp  flatten.cpp  flatten.hpp  linear.cpp  linear.hpp  maxpooling.cpp  maxpooling.hpp  relu.cpp  relu.hpp  softmax.cpp  softmax.hpp
source/parser/: parse_expression.cpp
source/runtime/: ir.cpp  runtime_ir.cpp  store_zip.cpp
test/: CMakeLists.txt  test_graph.cpp  test_load_data.cpp  test_relu.cpp  test_tensor.cpp
